--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
   build_and_test:
 
     runs-on: ubuntu-latest
-
+    # this is a comment
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 17
